<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.Fragment_chat"
    android:background="@color/bg">
<!--    header-->
    <androidx.cardview.widget.CardView
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       app:cardBackgroundColor="@color/bg"
        android:outlineAmbientShadowColor="@color/white"
        app:cardElevation="@dimen/dp_8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_65"
            app:titleTextColor="@color/white"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AppBarName"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_16"
                    android:layout_marginBottom="@dimen/dp_3"
                    android:fontFamily="@font/sora"
                    android:gravity="center_horizontal"
                    android:textFontWeight="700"
                />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="@dimen/dp_3"
                        android:layout_marginEnd="@dimen/dp_5">
                        <View
                            android:layout_width="@dimen/dp_6"
                            android:layout_height="@dimen/dp_6"
                            android:background="@color/success"/>
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/online"
                        android:textColor="#607D8B"
                        android:textSize="@dimen/sp_13"/>


                </LinearLayout>
            </LinearLayout>
            <ImageView
                android:id="@+id/new_chat_icon"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:src="@drawable/new_chat"
                android:layout_gravity="end"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:contentDescription="@string/new_chat_icon_desc"
                />

        </androidx.appcompat.widget.Toolbar>
    </androidx.cardview.widget.CardView>
<!--    new chat preText-->
    <LinearLayout
        android:id="@+id/new_chat_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/chatInput_CardView"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:visibility="visible"
        >
        <com.google.android.material.card.MaterialCardView
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_60"
            app:cardBackgroundColor="@color/accent"
            app:strokeWidth="0dp"
            app:cardCornerRadius="@dimen/radius_medium"
            android:outlineAmbientShadowColor="@color/accent2"
            app:cardElevation="@dimen/dp_16"
            android:layout_marginVertical="@dimen/dp_12"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/star"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_24"
                />
        </com.google.android.material.card.MaterialCardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_title"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_22"
            android:letterSpacing="-0.03"
            android:fontFamily="@font/sora"
            android:textFontWeight="700"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dp_15"
            android:lineHeight="-1.6px"
            android:text="@string/empty_screen_sub"
            android:textAlignment="center"
            android:textColor="#607D8B"
            android:textSize="@dimen/sp_15" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="@dimen/radius_pill"
                android:layout_marginEnd="@dimen/dp_6">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_37"
                    android:orientation="horizontal"
                    android:background="@color/surface2"
                    android:gravity="center"
                    android:paddingVertical="@dimen/dp_8"
                    android:paddingHorizontal="@dimen/dp_14"
                    >
                    <ImageView
                        android:layout_width="@dimen/dp_24"
                        android:layout_height="@dimen/dp_24"
                        android:src="@drawable/writing_hand"
                        android:layout_marginEnd="@dimen/dp_6"
                        android:contentDescription="@string/hand_icon_desc"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/write_something"
                        android:textColor="@color/text2"
                        android:fontFamily="@font/sora"
                        android:textSize="@dimen/sp_12"
                        />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="@dimen/radius_pill"
                android:layout_marginStart="@dimen/dp_6">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_37"
                    android:orientation="horizontal"
                    android:background="@color/surface2"
                    android:gravity="center"
                    android:paddingVertical="@dimen/dp_8"
                    android:paddingHorizontal="@dimen/dp_14"
                    >
                    <ImageView
                        android:layout_width="@dimen/dp_24"
                        android:layout_height="@dimen/dp_24"
                        android:src="@drawable/bulb"
                        android:layout_marginEnd="@dimen/dp_6"
                        android:contentDescription="@string/bulb_desc"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/explain_a_concept"
                        android:textColor="@color/text2"
                        android:fontFamily="@font/sora"
                        android:textSize="@dimen/sp_12"
                        />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_12">
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="@dimen/radius_pill"
                android:layout_marginEnd="@dimen/dp_4">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_37"
                    android:orientation="horizontal"
                    android:background="@color/surface2"
                    android:gravity="center"
                    android:paddingVertical="@dimen/dp_8"
                    android:paddingHorizontal="@dimen/dp_14"
                    >
                    <ImageView
                        android:layout_width="@dimen/dp_24"
                        android:layout_height="@dimen/dp_24"
                        android:src="@drawable/magnifier"
                        android:layout_marginEnd="@dimen/dp_6"
                        android:contentDescription="@string/search_icon_desc"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/research_a_topic"
                        android:textColor="@color/text2"
                        android:fontFamily="@font/sora"
                        android:textSize="@dimen/sp_12"
                        />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="@dimen/radius_pill"
                android:layout_marginStart="@dimen/dp_5">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_37"
                    android:orientation="horizontal"
                    android:background="@color/surface2"
                    android:gravity="center"
                    android:paddingVertical="@dimen/dp_8"
                    android:paddingHorizontal="@dimen/dp_14"
                    >
                    <ImageView
                        android:layout_width="@dimen/dp_24"
                        android:layout_height="@dimen/dp_24"
                        android:src="@drawable/computer"
                        android:layout_marginEnd="@dimen/dp_6"
                        android:contentDescription="@string/computer_icon_desc"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/help_with_coding"
                        android:textColor="@color/text2"
                        android:fontFamily="@font/sora"
                        android:textSize="@dimen/sp_12"
                        />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>



    </LinearLayout>
<!--    recycler view -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/chatInput_CardView"
        android:layout_marginBottom="@dimen/dp_12"
        android:visibility="gone"
        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/chatInput_CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="@dimen/dp_22"
        android:layout_marginHorizontal="@dimen/dp_12"
        android:layout_marginBottom="@dimen/dp_20"
        app:strokeWidth="0dp"
        app:cardBackgroundColor="@android:color/transparent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:background="@color/surface2"
            android:paddingHorizontal="10dp">
            <ImageView
                android:id="@+id/attachment"
                android:layout_width="@dimen/dp_45"
                android:layout_height="@dimen/dp_45"
                android:src="@drawable/attachment"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:padding="8dp"
                android:contentDescription="@string/attachment_icon_desc"
                />

            <EditText
                android:id="@+id/message_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_4"
                android:background="@android:color/transparent"
                android:fontFamily="@font/sora"
                android:hint="@string/message_hint"
                android:minHeight="48dp"
                android:textColor="@color/text2"
                android:textColorHint="@color/text2"
                android:textSize="@dimen/sp_14"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/send_btn"
                app:layout_constraintStart_toEndOf="@id/attachment"
                app:layout_constraintTop_toTopOf="parent" />
            <ImageView
                android:id="@+id/send_btn"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:src="@drawable/send_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/send_message_desc"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>