<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardBackgroundColor="@color/surface2"
    app:rippleColor="@color/surface"
    app:strokeWidth="0dp"
    android:id="@+id/mainContainer"
    android:layout_marginVertical="4dp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="@dimen/dp_8"
        android:paddingHorizontal="@dimen/dp_8">
        <androidx.cardview.widget.CardView
            android:id="@+id/conv_icon"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            app:cardCornerRadius="@dimen/radius_medium"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cardBackgroundColor="@android:color/transparent"
            android:elevation="@dimen/dp_1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_24"
                android:text="@string/react_text"
                android:textColor="@color/text2"
                android:layout_gravity="center"
                />
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:fontFamily="@font/sora"
            android:textFontWeight="800"
            tools:text="@string/sampleHistory"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/conv_icon"
            app:layout_constraintTop_toTopOf="@id/conv_icon"
            android:layout_marginStart="10dp"

            />
        <TextView
            android:id="@+id/time_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sora"
            android:text="@string/history_time_sample"
            android:textColor="@color/text2"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="@id/title"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>